добавил getbarinfo и editbarinfo
