# controllers/requests/input/input.go
@@ -1,0 +1,5 @@
+package input
+
+type BarIdInPathInput struct {
+	BarId int `input:":bar_id"`
+}
