# controllers/responses/responses.go
@@ -1,4 +1,4 @@
-package controllers
+package responses
 
 type ProfileResponse struct {
 	Id         uint64 `json:"id"`
@@ -11,12 +11,16 @@ type ProfileResponse struct {
 }
 
 type BarInfoResponse struct {
-	Id          uint64 `json:"id"`
-	Email       string `json:"email"`
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	Address     string `json:"address"`
-	LogoUrl     string `json:"logo_url,omitempty"`
+	Id          uint64   `json:"id"`
+	OwnerId     uint64   `json:"owner_id"`
+	Email       string   `json:"email"`
+	Name        string   `json:"name"`
+	Phone       string   `json:"phone"`
+	Description string   `json:"description"`
+	Address     string   `json:"address"`
+	LogoUrl     string   `json:"logo_url,omitempty"`
+	IsVisible   bool     `json:"is_visible_for_clients"`
+	Admins      []uint64 `json:"admin_ids"`
 }
 
 type AuthorizationPayload struct {
